--- a/card-preview-component/css/style.css
+++ b/card-preview-component/css/style.css
@@ -57,7 +57,8 @@ body{
 }
 .card__img{
     background: linear-gradient(to right, rgba(161, 25, 245, 0.4), rgba(161, 25, 245, 0.4)), url(../images/image-header-desktop.jpg);
-    background-size: 100% 100%;
+    background-size: cover;
+    background-position: center;
     width: 100%;
     height: 370px;
     border-top-right-radius: 15px;
