--- a/easybank-landing-page-master/scss/_news.scss
+++ b/easybank-landing-page-master/scss/_news.scss
@@ -11,6 +11,7 @@
         gap: 1.5rem;
         margin-top: 2rem;
         article{
+            padding: 10px;
             background-color: #fff;
             img{
                 width: 300px;
