--- a/easybank-landing-page-master/scss/index.css
+++ b/easybank-landing-page-master/scss/index.css
@@ -13,89 +13,65 @@ img {
 }
 
 body {
-  font-family: 'Public Sans', Helvetica, Arial, sans-serif;
+  font-family: "Public Sans", Helvetica, Arial, sans-serif;
   overflow-x: hidden;
-  background-color: #fafafa;
+  background-color: hsl(0deg, 0%, 98%);
 }
 
 .defaultBtn {
-  padding: .8em 1.5em;
+  padding: 0.8em 1.5em;
   border-radius: 30px;
   text-decoration: none;
   color: #fff;
   font-weight: 510;
-  background-image: -webkit-gradient(linear, left top, right top, from(#31d35c), to(#2bb7da));
-  background-image: linear-gradient(to right, #31d35c, #2bb7da);
+  background-image: linear-gradient(to right, hsl(136deg, 65%, 51%), hsl(192deg, 70%, 51%));
 }
-
 .defaultBtn:hover {
-  background-image: -webkit-gradient(linear, left top, right top, from(#5bdc7d), to(#56c5e1));
   background-image: linear-gradient(to right, #5bdc7d, #56c5e1);
 }
 
 header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   margin-top: 0;
   background-color: #fff;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   position: relative;
   z-index: 2;
 }
-
 header h1 {
   display: none;
 }
-
 header .desktopNav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
-
 header .desktopNav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   list-style: none;
 }
-
 header .desktopNav ul li {
   padding: 35px 0;
   border-bottom: 4.5px solid transparent;
-  margin: 0 .5rem;
+  margin: 0 0.5rem;
 }
-
 header .desktopNav ul li a {
   padding: 10px;
   text-decoration: none;
-  color: #9698a6;
+  color: hsl(233deg, 8%, 62%);
 }
-
 header .desktopNav ul li:hover {
-  -o-border-image: linear-gradient(to right, #31d35c, #2bb7da);
-     border-image: -webkit-gradient(linear, left top, right top, from(#31d35c), to(#2bb7da));
-     border-image: linear-gradient(to right, #31d35c, #2bb7da);
+  -o-border-image: linear-gradient(to right, hsl(136deg, 65%, 51%), hsl(192deg, 70%, 51%));
+     border-image: linear-gradient(to right, hsl(136deg, 65%, 51%), hsl(192deg, 70%, 51%));
   border-image-slice: 1;
 }
-
 header .desktopNav ul li:hover a {
-  color: #2d314d;
-  -webkit-transition: .3s;
-  transition: .3s;
+  color: hsl(233deg, 26%, 24%);
+  transition: 0.3s;
 }
-
 header .mobileNav {
   display: none;
 }
-
 header .menuToggler {
   display: none;
 }
@@ -132,34 +108,27 @@ header .menuToggler {
   header .mobileNav ul li a {
     padding: 20px;
     text-decoration: none;
-    color: #2d314d;
+    color: hsl(233deg, 26%, 24%);
   }
 }
-
 .intro {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   background-image: url("../images/bg-intro-desktop.svg");
   background-size: 1000px;
   background-repeat: no-repeat;
   background-position: right -220px top -100px;
 }
-
 .intro__description {
   padding: 8rem 2rem;
 }
-
 .intro__description h2 {
   font-size: 3rem;
   line-height: 1.2;
   width: 80%;
   font-weight: 300;
-  color: #2d314d;
+  color: hsl(233deg, 26%, 24%);
 }
-
 .intro__description p {
   margin: 1rem 0;
   color: #7b7d8e;
@@ -167,12 +136,10 @@ header .menuToggler {
   width: 74%;
   line-height: 1.5;
 }
-
 .intro__description .defaultBtn {
   display: inline-block;
   margin-top: 1rem;
 }
-
 .intro img {
   margin-top: -6rem;
   margin-right: -6rem;
@@ -180,10 +147,7 @@ header .menuToggler {
 
 @media screen and (min-width: 350px) and (max-width: 800px) {
   .intro {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
+    flex-direction: column-reverse;
     background-image: url("../images/bg-intro-mobile.svg");
     background-size: 350px;
     max-height: 100vh;
@@ -211,46 +175,36 @@ header .menuToggler {
     margin: 1rem auto;
   }
 }
-
 .whyEzBnk {
-  background-color: #f3f4f6;
+  background-color: hsl(220deg, 16%, 96%);
   position: relative;
   z-index: -1;
   margin-top: -7rem;
   padding: 3rem 4rem;
 }
-
 .whyEzBnk h2 {
-  color: #2d314d;
+  color: hsl(233deg, 26%, 24%);
   font-size: 2rem;
   font-weight: 300;
 }
-
 .whyEzBnk__description {
   width: 70%;
 }
-
 .whyEzBnk p {
   margin-top: 1.2rem;
   color: #7b7d8e;
 }
-
 .whyEzBnk__features {
   margin-top: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   padding-bottom: 5em;
 }
-
 .whyEzBnk__features__card h3 {
   margin: 1rem 0;
-  color: #2d314d;
+  color: hsl(233deg, 26%, 24%);
   font-weight: 400;
 }
-
 .whyEzBnk__features__card p {
   width: 90%;
 }
@@ -265,10 +219,7 @@ header .menuToggler {
     width: 100%;
   }
   .whyEzBnk__features {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .whyEzBnk__features p {
     margin-bottom: 2rem;
@@ -278,33 +229,25 @@ header .menuToggler {
     margin: 0 auto;
   }
 }
-
 .news {
-  background-color: #fafafa;
+  background-color: hsl(0deg, 0%, 98%);
   padding: 3rem 6rem;
 }
-
 .news h2 {
   font-size: 2rem;
-  color: #2d314d;
+  color: hsl(233deg, 26%, 24%);
   font-weight: 300;
 }
-
 .news .articles {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   gap: 1.5rem;
   margin-top: 2rem;
 }
-
 .news .articles article {
   padding: 10px;
   background-color: #fff;
 }
-
 .news .articles article img {
   width: 300px;
   height: 200px;
@@ -313,31 +256,25 @@ header .menuToggler {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
-
 .news .articles article h4 {
-  color: #9698a6;
+  color: hsl(233deg, 8%, 62%);
   font-weight: 300;
-  font-size: .7rem;
+  font-size: 0.7rem;
   margin: 10px 0;
 }
-
 .news .articles article h3 a {
-  color: #2d314d;
+  color: hsl(233deg, 26%, 24%);
   font-weight: 300;
   text-decoration: none;
-  -webkit-transition: .3s;
-  transition: .3s;
+  transition: 0.3s;
 }
-
 .news .articles article h3 a:hover {
-  color: #31d35c;
-  -webkit-transition: .3s;
-  transition: .3s;
+  color: hsl(136deg, 65%, 51%);
+  transition: 0.3s;
 }
-
 .news .articles article p {
   margin-top: 1rem;
-  color: #9698a6;
+  color: hsl(233deg, 8%, 62%);
 }
 
 @media screen and (min-width: 350px) and (max-width: 800px) {
@@ -348,10 +285,7 @@ header .menuToggler {
     text-align: center;
   }
   .news .articles {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
     width: 90%;
     margin: 2rem auto;
   }
@@ -365,76 +299,53 @@ header .menuToggler {
     margin-right: auto;
   }
 }
-
 footer {
-  background-color: #2d314d;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  background-color: hsl(233deg, 26%, 24%);
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   padding: 2rem;
 }
-
 footer ul {
   list-style: none;
 }
-
 footer .social ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-top: 3.8rem;
 }
-
 footer .social ul li {
   margin: 5px;
 }
-
 footer .social ul li:hover {
   cursor: pointer;
 }
-
 footer .social ul li:hover path {
-  fill: #31d35c;
+  fill: hsl(136deg, 65%, 51%);
 }
-
 footer .footerNav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   margin-left: 7rem;
 }
-
 footer .footerNav ul {
   margin: 0 1rem;
 }
-
 footer .footerNav ul li {
   padding: 10px;
 }
-
 footer .footerNav ul li a {
   color: #fff;
   text-decoration: none;
-  -webkit-transition: .3s;
-  transition: .3s;
+  transition: 0.3s;
 }
-
 footer .footerNav ul li a:hover {
-  color: #31d35c;
-  -webkit-transition: .3s;
-  transition: .3s;
+  color: hsl(136deg, 65%, 51%);
+  transition: 0.3s;
 }
-
 footer .copyright {
   margin-left: auto;
   margin-right: 1rem;
-  color: #9698a6;
+  color: hsl(233deg, 8%, 62%);
 }
-
 footer .copyright .defaultBtn {
   display: block;
   width: 50%;
@@ -444,19 +355,13 @@ footer .copyright .defaultBtn {
 
 @media screen and (min-width: 350px) and (max-width: 800px) {
   footer {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   footer .social {
     margin: 0 auto;
   }
   footer .footerNav {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
     margin: 0 auto;
   }
   footer .footerNav li {
@@ -468,5 +373,4 @@ footer .copyright .defaultBtn {
   footer .copyright .defaultBtn {
     margin: 1rem auto;
   }
-}
-/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
